--- a/01-fundamentos-reactjs/src/components/Post.module.css
+++ b/01-fundamentos-reactjs/src/components/Post.module.css
@@ -82,7 +82,7 @@
   margin-top: 1rem;
 }
 
-.commentForm > button:hover {
+.commentForm > button:not(:disabled):hover  {
   background: var(--green-300);
 }
 
@@ -106,6 +106,11 @@
   font-weight: bold;
   cursor: pointer;
   transition: background-color 0.1s;
+}
+
+.commentForm > footer button:disabled {
+  opacity: 0.7;
+  cursor: not-allowed;
 }
 
 .commentList {
