--- a/Desafio-01/src/App.css
+++ b/Desafio-01/src/App.css
@@ -1,3 +1,9 @@
-main {
+.mainAppWrapper {
+  display: flex;
+  flex-flow: column wrap;
+  position: absolute;
+  width: 100%;
+  height: 100%;
   background: #1a1a1a;
 }
+
