--- a/Desafio-01/src/components/AddTask/style.module.css
+++ b/Desafio-01/src/components/AddTask/style.module.css
@@ -31,6 +31,7 @@ span > img {
   margin-top: -1.5rem;
   margin-left: 0.5rem;
   border: none;
+  gap: 1rem;
 
   font-family: Inter;
   font-size: 14px;
